now fixed overflow issued caused by hero h1 title

--- a/src/styles/3--components/_header.scss
+++ b/src/styles/3--components/_header.scss
@@ -18,7 +18,6 @@ header {
 	background-color: color(primary);
 	z-index: 1;
 	position: relative;
-	overflow: hidden;
 
 	// NAVBAR
 
@@ -35,6 +34,7 @@ header {
 		@include displayFlex(row, space-around, center);
 		width: 100%;
 		padding: 1rem 5%;
+		overflow: hidden;
 		.logo {
 			margin-right: auto;
 		}
@@ -121,7 +121,7 @@ header > .navBar-bg {
 				font-size: 3.5vw;
 				h1,
 				button {
-					margin: 3vh;
+					margin: 3vh 0;
 				}
 			}
 
